Notebook to output Rings logs as feather file.

--- a/notebooks/prototype_data_proc.ipynb
+++ b/notebooks/prototype_data_proc.ipynb
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 92,
    "id": "859fc866-90ce-47f4-9aa0-0f117d347ac4",
    "metadata": {},
    "outputs": [],
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 93,
    "id": "ef25a86f-9540-4577-afad-cb5c80f6c0ed",
    "metadata": {},
    "outputs": [],
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 95,
    "id": "f38e9863-73c6-47ba-bcc2-570dcef1492c",
    "metadata": {},
    "outputs": [
@@ -592,18 +592,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logfiles list contains 1 files.\n",
-      "0.07m to process log files.\n"
+      "Logfiles list contains 31 files.\n",
+      "10 files have been processed. 1.03 minutes elapsed\n",
+      "20 files have been processed. 2.82 minutes elapsed\n",
+      "30 files have been processed. 4.52 minutes elapsed\n",
+      "5.98m to process log files.\n"
      ]
     }
    ],
    "source": [
-    "parser.parse_files("
+    "parser.parse_files()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 96,
    "id": "fc716f04-be94-4e21-b68f-f1f6a8291add",
    "metadata": {},
    "outputs": [
@@ -631,9 +634,7 @@
        "      <th>ip</th>\n",
        "      <th>identd</th>\n",
        "      <th>userid</th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
-       "      <th>timezone</th>\n",
+       "      <th>datetime</th>\n",
        "      <th>request</th>\n",
        "      <th>status</th>\n",
        "      <th>size</th>\n",
@@ -642,17 +643,187 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>185.191.171.2</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-12-01 04:28:47-07:00</td>\n",
+       "      <td>GET /archive/co-e_v_j_s-vims-2-qube-v1.0/covim...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>276992.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mozilla/5.0 (compatible; SemrushBot/7~bl; +htt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>185.191.171.25</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-12-01 04:28:48-07:00</td>\n",
+       "      <td>GET /cdroms/Viking_Orbiter/vo_1012/f086axx/f08...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>462876.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mozilla/5.0 (compatible; SemrushBot/7~bl; +htt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>185.191.171.12</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-12-01 04:28:48-07:00</td>\n",
+       "      <td>GET /data/co-e_v_j_s-vims-2-qube-v1.0/covims_0...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>76928.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mozilla/5.0 (compatible; SemrushBot/7~bl; +htt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>157.55.39.170</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-12-01 04:28:49-07:00</td>\n",
+       "      <td>GET /archive/a15c-l-mc-2-scanned-images-v1.0/A...</td>\n",
+       "      <td>304</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mozilla/5.0 (compatible; bingbot/2.0; +http://...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.255.253.103</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-12-01 04:28:49-07:00</td>\n",
+       "      <td>GET /Missions/Viking_Orbiter/vo_1058/browse/f3...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>82500.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mozilla/5.0 (compatible; YandexBot/3.0; +http:...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78770</th>\n",
+       "      <td>13.66.139.67</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-12-02 03:36:41-07:00</td>\n",
+       "      <td>GET /cdroms/Viking_Orbiter/vo_1016/f372axx/f37...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>398308.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mozilla/5.0 (compatible; bingbot/2.0; +http://...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78771</th>\n",
+       "      <td>13.66.139.67</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-12-02 03:36:41-07:00</td>\n",
+       "      <td>GET /data/lro-l-lamp-2-edr-v1.0/LROLAM_0031/DA...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>6869.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mozilla/5.0 (compatible; bingbot/2.0; +http://...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78772</th>\n",
+       "      <td>185.191.171.17</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-12-02 03:36:42-07:00</td>\n",
+       "      <td>GET /Missions/Viking_Orbiter/vo_1010/f034axx/f...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>558454.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mozilla/5.0 (compatible; SemrushBot/7~bl; +htt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78773</th>\n",
+       "      <td>185.191.171.19</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-12-02 03:36:43-07:00</td>\n",
+       "      <td>GET /Individual_Investigations/multi_galileo_n...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1125602.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mozilla/5.0 (compatible; SemrushBot/7~bl; +htt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78774</th>\n",
+       "      <td>207.46.13.35</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-12-02 03:36:44-07:00</td>\n",
+       "      <td>GET /Missions/Chandrayaan_1/M3/CH1M3_0003/EXTR...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>110080.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mozilla/5.0 (compatible; bingbot/2.0; +http://...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2442025 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [ip, identd, userid, date, time, timezone, request, status, size, referer, user_agent]\n",
-       "Index: []"
+       "                   ip identd userid                   datetime  \\\n",
+       "0       185.191.171.2   None   None  2020-12-01 04:28:47-07:00   \n",
+       "1      185.191.171.25   None   None  2020-12-01 04:28:48-07:00   \n",
+       "2      185.191.171.12   None   None  2020-12-01 04:28:48-07:00   \n",
+       "3       157.55.39.170   None   None  2020-12-01 04:28:49-07:00   \n",
+       "4       5.255.253.103   None   None  2020-12-01 04:28:49-07:00   \n",
+       "...               ...    ...    ...                        ...   \n",
+       "78770    13.66.139.67   None   None  2020-12-02 03:36:41-07:00   \n",
+       "78771    13.66.139.67   None   None  2020-12-02 03:36:41-07:00   \n",
+       "78772  185.191.171.17   None   None  2020-12-02 03:36:42-07:00   \n",
+       "78773  185.191.171.19   None   None  2020-12-02 03:36:43-07:00   \n",
+       "78774    207.46.13.35   None   None  2020-12-02 03:36:44-07:00   \n",
+       "\n",
+       "                                                 request status       size  \\\n",
+       "0      GET /archive/co-e_v_j_s-vims-2-qube-v1.0/covim...    200   276992.0   \n",
+       "1      GET /cdroms/Viking_Orbiter/vo_1012/f086axx/f08...    200   462876.0   \n",
+       "2      GET /data/co-e_v_j_s-vims-2-qube-v1.0/covims_0...    200    76928.0   \n",
+       "3      GET /archive/a15c-l-mc-2-scanned-images-v1.0/A...    304        NaN   \n",
+       "4      GET /Missions/Viking_Orbiter/vo_1058/browse/f3...    200    82500.0   \n",
+       "...                                                  ...    ...        ...   \n",
+       "78770  GET /cdroms/Viking_Orbiter/vo_1016/f372axx/f37...    200   398308.0   \n",
+       "78771  GET /data/lro-l-lamp-2-edr-v1.0/LROLAM_0031/DA...    200     6869.0   \n",
+       "78772  GET /Missions/Viking_Orbiter/vo_1010/f034axx/f...    200   558454.0   \n",
+       "78773  GET /Individual_Investigations/multi_galileo_n...    200  1125602.0   \n",
+       "78774  GET /Missions/Chandrayaan_1/M3/CH1M3_0003/EXTR...    200   110080.0   \n",
+       "\n",
+       "      referer                                         user_agent  \n",
+       "0        None  Mozilla/5.0 (compatible; SemrushBot/7~bl; +htt...  \n",
+       "1        None  Mozilla/5.0 (compatible; SemrushBot/7~bl; +htt...  \n",
+       "2        None  Mozilla/5.0 (compatible; SemrushBot/7~bl; +htt...  \n",
+       "3        None  Mozilla/5.0 (compatible; bingbot/2.0; +http://...  \n",
+       "4        None  Mozilla/5.0 (compatible; YandexBot/3.0; +http:...  \n",
+       "...       ...                                                ...  \n",
+       "78770    None  Mozilla/5.0 (compatible; bingbot/2.0; +http://...  \n",
+       "78771    None  Mozilla/5.0 (compatible; bingbot/2.0; +http://...  \n",
+       "78772    None  Mozilla/5.0 (compatible; SemrushBot/7~bl; +htt...  \n",
+       "78773    None  Mozilla/5.0 (compatible; SemrushBot/7~bl; +htt...  \n",
+       "78774    None  Mozilla/5.0 (compatible; bingbot/2.0; +http://...  \n",
+       "\n",
+       "[2442025 rows x 9 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
