Add export to parquet format.

--- a/notebooks/prototype_data_proc_rings.ipynb
+++ b/notebooks/prototype_data_proc_rings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "14dcb8bf-2569-45fd-9eb1-be96e1de83ce",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "233f6cef-f1de-4200-8e5c-f84ae8335353",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "fef7b848-d67e-42b2-bcff-202b6c9488c9",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "1dbc0429-af20-4de2-8f68-cad5db16f2a0",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "fc3de3d2-9d03-4cd7-acf9-a1cdfadb73e7",
    "metadata": {},
    "outputs": [
@@ -76,11 +76,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logfiles list contains 10 files.\n",
-      "10 files have been processed. 0.03 minutes elapsed\n",
-      "0.04m to process log files.\n",
-      "CPU times: user 2.14 s, sys: 88.2 ms, total: 2.23 s\n",
-      "Wall time: 2.23 s\n"
+      "Logfiles list contains 198 files.\n",
+      "10 files have been processed. 0.04 minutes elapsed\n",
+      "20 files have been processed. 0.09 minutes elapsed\n",
+      "30 files have been processed. 0.19 minutes elapsed\n",
+      "40 files have been processed. 0.26 minutes elapsed\n",
+      "50 files have been processed. 0.34 minutes elapsed\n",
+      "60 files have been processed. 0.42 minutes elapsed\n",
+      "70 files have been processed. 0.53 minutes elapsed\n",
+      "80 files have been processed. 0.64 minutes elapsed\n",
+      "90 files have been processed. 0.77 minutes elapsed\n",
+      "100 files have been processed. 0.89 minutes elapsed\n",
+      "110 files have been processed. 0.99 minutes elapsed\n",
+      "120 files have been processed. 1.11 minutes elapsed\n",
+      "130 files have been processed. 1.24 minutes elapsed\n",
+      "140 files have been processed. 1.35 minutes elapsed\n",
+      "150 files have been processed. 1.47 minutes elapsed\n",
+      "160 files have been processed. 1.57 minutes elapsed\n",
+      "170 files have been processed. 1.69 minutes elapsed\n",
+      "180 files have been processed. 1.79 minutes elapsed\n",
+      "190 files have been processed. 1.89 minutes elapsed\n",
+      "2.0m to process log files.\n",
+      "CPU times: user 1min 33s, sys: 25.1 s, total: 1min 58s\n",
+      "Wall time: 1min 59s\n"
      ]
     }
    ],
@@ -92,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "d6d4ac00-ba35-49f5-9c6b-2e8f5b4daaa1",
    "metadata": {},
    "outputs": [
@@ -100,17 +118,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed creating feather formatted dataframe at ../datasets/rings_tools2.feather.\n"
+      "Completed creating parquet file at ../datasets/rings_tools2.pq.\n"
      ]
     }
    ],
    "source": [
-    "parser_tools2.to_feather(filepath=\"../datasets/rings_tools2.feather\")"
+    "parser_tools2.to_file(type=\"parquet\", filepath=\"../datasets/rings_tools2.pq\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "827e43b6-d1e1-49e9-a139-d4d323796204",
    "metadata": {},
    "outputs": [
@@ -119,28 +137,28 @@
      "output_type": "stream",
      "text": [
       "Logfiles list contains 197 files.\n",
-      "10 files have been processed. 0.17 minutes elapsed\n",
-      "20 files have been processed. 0.35 minutes elapsed\n",
-      "30 files have been processed. 0.71 minutes elapsed\n",
-      "40 files have been processed. 0.89 minutes elapsed\n",
-      "50 files have been processed. 1.15 minutes elapsed\n",
-      "60 files have been processed. 1.46 minutes elapsed\n",
-      "70 files have been processed. 1.75 minutes elapsed\n",
-      "80 files have been processed. 2.1 minutes elapsed\n",
-      "90 files have been processed. 2.5 minutes elapsed\n",
-      "100 files have been processed. 2.77 minutes elapsed\n",
-      "110 files have been processed. 3.02 minutes elapsed\n",
-      "120 files have been processed. 3.38 minutes elapsed\n",
-      "130 files have been processed. 3.64 minutes elapsed\n",
-      "140 files have been processed. 3.94 minutes elapsed\n",
-      "150 files have been processed. 4.38 minutes elapsed\n",
-      "160 files have been processed. 4.68 minutes elapsed\n",
-      "170 files have been processed. 4.94 minutes elapsed\n",
-      "180 files have been processed. 5.29 minutes elapsed\n",
-      "190 files have been processed. 5.6 minutes elapsed\n",
-      "5.77m to process log files.\n",
-      "CPU times: user 4min 19s, sys: 1min 25s, total: 5min 45s\n",
-      "Wall time: 5min 46s\n"
+      "10 files have been processed. 0.15 minutes elapsed\n",
+      "20 files have been processed. 0.33 minutes elapsed\n",
+      "30 files have been processed. 0.62 minutes elapsed\n",
+      "40 files have been processed. 0.76 minutes elapsed\n",
+      "50 files have been processed. 0.97 minutes elapsed\n",
+      "60 files have been processed. 1.22 minutes elapsed\n",
+      "70 files have been processed. 1.42 minutes elapsed\n",
+      "80 files have been processed. 1.69 minutes elapsed\n",
+      "90 files have been processed. 2.01 minutes elapsed\n",
+      "100 files have been processed. 2.24 minutes elapsed\n",
+      "110 files have been processed. 2.43 minutes elapsed\n",
+      "120 files have been processed. 2.74 minutes elapsed\n",
+      "130 files have been processed. 2.95 minutes elapsed\n",
+      "140 files have been processed. 3.19 minutes elapsed\n",
+      "150 files have been processed. 3.51 minutes elapsed\n",
+      "160 files have been processed. 3.73 minutes elapsed\n",
+      "170 files have been processed. 3.94 minutes elapsed\n",
+      "180 files have been processed. 4.24 minutes elapsed\n",
+      "190 files have been processed. 4.51 minutes elapsed\n",
+      "4.67m to process log files.\n",
+      "CPU times: user 4min 17s, sys: 21.1 s, total: 4min 38s\n",
+      "Wall time: 4min 40s\n"
      ]
     }
    ],
@@ -152,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "id": "98da5edf-a57a-4e53-a07b-2d899fca2a81",
    "metadata": {},
    "outputs": [
@@ -160,12 +178,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed creating feather formatted dataframe at ../datasets/rings_server1.feather.\n"
+      "Completed creating parquet file at ../datasets/rings_server1.pq.\n"
      ]
     }
    ],
    "source": [
-    "parser_server1.to_feather(filepath=\"../datasets/rings_server1.feather\")"
+    "parser_server1.to_file(type=\"parquet\", filepath=\"../datasets/rings_server1.pq\")"
    ]
   },
   {
@@ -198,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "366f2acc-44dd-46fc-9272-08367bf56954",
    "metadata": {},
    "outputs": [
@@ -208,7 +226,7 @@
        "(3465553, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "ee43d48a-8641-4bea-a7f0-4c2934a123f2",
    "metadata": {},
    "outputs": [
@@ -349,7 +367,7 @@
        "4    None  Mozilla/5.0 (compatible; bingbot/2.0; +http://...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "id": "9eedde83-b683-404f-84b8-2ef9c2a7eb14",
    "metadata": {},
    "outputs": [
