Add option to output to csv. Curse you PowerBI. Notebook started for Rings EDA on yearly dataset.

--- a/notebooks/prototype_data_proc_rings.ipynb
+++ b/notebooks/prototype_data_proc_rings.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "id": "d6d4ac00-ba35-49f5-9c6b-2e8f5b4daaa1",
    "metadata": {},
    "outputs": [
@@ -118,12 +118,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed creating parquet file at ../datasets/rings_tools2.pq.\n"
+      "Completed creating csv file at ../datasets/rings_tools2.csv.\n"
      ]
     }
    ],
    "source": [
-    "parser_tools2.to_file(type=\"parquet\", filepath=\"../datasets/rings_tools2.pq\")"
+    "parser_tools2.to_file(type=\"csv\", filepath=\"../datasets/rings_tools2.csv\")"
    ]
   },
   {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "id": "98da5edf-a57a-4e53-a07b-2d899fca2a81",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "id": "c98392c1-1081-4fe9-bbbd-1fa82c966b97",
    "metadata": {},
    "outputs": [
@@ -204,29 +204,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.47 s, sys: 635 ms, total: 2.1 s\n",
-      "Wall time: 1.33 s\n"
+      "CPU times: user 1.97 s, sys: 932 ms, total: 2.9 s\n",
+      "Wall time: 3.18 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "df_server1 = pd.read_feather('../datasets/rings_server1.feather')"
+    "df_server1 = pd.read_parquet('../datasets/rings_server1.pq')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "id": "366f2acc-44dd-46fc-9272-08367bf56954",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3465553, 10)"
+       "(3465553, 9)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "id": "ee43d48a-8641-4bea-a7f0-4c2934a123f2",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>ip</th>\n",
        "      <th>identd</th>\n",
        "      <th>userid</th>\n",
@@ -277,7 +276,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>66.249.79.92</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -290,7 +288,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>66.249.79.92</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -303,7 +300,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>114.119.138.239</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -316,7 +312,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>5.255.253.135</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -329,7 +324,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>13.66.139.95</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -345,12 +339,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   index               ip identd userid                  datetime  \\\n",
-       "0      0     66.249.79.92   None   None 2021-01-01 00:00:12-08:00   \n",
-       "1      1     66.249.79.92   None   None 2021-01-01 00:00:16-08:00   \n",
-       "2      2  114.119.138.239   None   None 2021-01-01 00:00:16-08:00   \n",
-       "3      3    5.255.253.135   None   None 2021-01-01 00:00:19-08:00   \n",
-       "4      4     13.66.139.95   None   None 2021-01-01 00:00:52-08:00   \n",
+       "                ip identd userid                  datetime  \\\n",
+       "0     66.249.79.92   None   None 2021-01-01 00:00:12-08:00   \n",
+       "1     66.249.79.92   None   None 2021-01-01 00:00:16-08:00   \n",
+       "2  114.119.138.239   None   None 2021-01-01 00:00:16-08:00   \n",
+       "3    5.255.253.135   None   None 2021-01-01 00:00:19-08:00   \n",
+       "4     13.66.139.95   None   None 2021-01-01 00:00:52-08:00   \n",
        "\n",
        "                                             request  status      size  \\\n",
        "0  GET /pds4/bundles/cassini_vims_saturn/data_raw...     200   88064.0   \n",
@@ -367,7 +361,7 @@
        "4    None  Mozilla/5.0 (compatible; bingbot/2.0; +http://...  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "id": "9eedde83-b683-404f-84b8-2ef9c2a7eb14",
    "metadata": {},
    "outputs": [
